<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layoutDirection="rtl"
    app:cardCornerRadius="@dimen/radius_normal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.khayyamapp.juveiran.custom_views.IranSansTextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/margin_medium"
                android:text="@string/layout_loginOrRegister_alertTitle"
                android:textColor="@color/textColor" />


            <com.khayyamapp.juveiran.custom_views.IranSansTextView
                android:layout_width="match_parent"
                android:layout_height="60dp"

                android:gravity="center"
                android:paddingStart="@dimen/margin_medium"
                android:text="@string/layout_loginOrRegister_alertMessage"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <com.khayyamapp.juveiran.custom_views.IranSansButton
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/margin_medium"
                android:layout_weight="1"
                android:background="@drawable/shape_register2"
                android:text="@string/login"

                android:id="@+id/btn_layoutLoginOrRegister_login"
                android:textColor="@color/textColor" />

            <com.khayyamapp.juveiran.custom_views.IranSansButton
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/margin_medium"
                android:layout_weight="1"
                android:background="@drawable/shape_register_button"
                android:text="@string/closeDialog"
                android:id="@+id/btn_layoutLoginOrRegister_cancelDialog"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>