<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_FforgotPassword_viewContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:layoutDirection="rtl">

    <com.khayyamapp.juveiran.custom_views.IranSansTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/recoverPasswordText"
        android:textColor="@color/textColor"
        android:textSize="14sp" />

    <com.khayyamapp.juveiran.custom_views.IranSansEditText
        android:id="@+id/et_FgetVerifyCode_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="@drawable/shape_login_button"
        android:hint="@string/fRegister_inputs_email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/margin_small"
        android:paddingEnd="@dimen/margin_medium"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="@dimen/textSize_buttons" />

    <com.khayyamapp.juveiran.custom_views.IranSansButton
        android:id="@+id/btn_FgetVerifyCode_send"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:background="@drawable/shape_register_button"
        android:text="@string/getVerifyCode"
        android:textColor="#000"
        android:textSize="@dimen/textSize_buttons" />


</RelativeLayout>