<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".fragment.NewsFragment">

    <android.support.design.widget.TabLayout
        android:id="@+id/tl_Fnews_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorToolbarBackground"
        android:elevation="1.5dp"
        android:layoutDirection="ltr"
        app:tabTextAppearance="@style/TablayoutTextSize"
        tools:targetApi="lollipop">


        <android.support.design.widget.TabItem
            android:id="@+id/ti_Fnews_mostViewedNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ti_text_categories" />

        <android.support.design.widget.TabItem
            android:id="@+id/ti_Fnews_shortNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ti_text_shortNews" />


        <android.support.design.widget.TabItem
            android:id="@+id/ti_Fnews_lastestNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ti_text_lastestNews" />


    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_Fnews_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tl_Fnews_tabs"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_Fnews_createArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/margin_medium"
        android:src="@drawable/ic_create_black_24dp" />

</RelativeLayout>