<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:layoutDirection="rtl">


    <com.khayyamapp.juveiran.custom_views.IranSansEditText
        android:id="@+id/et_FenterNewPassword_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_above="@id/et_FenterNewPassword_rePass"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="@drawable/shape_login_button"
        android:hint="@string/enterNewPassword"
        android:inputType="textPassword"
        android:paddingStart="@dimen/margin_small"
        android:paddingEnd="@dimen/margin_medium"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="@dimen/textSize_buttons" />


    <com.khayyamapp.juveiran.custom_views.IranSansEditText
        android:id="@+id/et_FenterNewPassword_rePass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_above="@id/btn_FenterNewPassword_changePass"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:background="@drawable/shape_login_button"
        android:hint="@string/reEnterNewPassword"
        android:inputType="textPassword"
        android:paddingStart="@dimen/margin_small"
        android:paddingEnd="@dimen/margin_medium"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textSize="@dimen/textSize_buttons" />

    <com.khayyamapp.juveiran.custom_views.IranSansButton
        android:id="@+id/btn_FenterNewPassword_changePass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:background="@drawable/shape_register_button"
        android:text="@string/changePassword"
        android:textColor="#000"
        android:textSize="@dimen/textSize_buttons" />

</RelativeLayout>