<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layoutDirection="rtl">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bc_register" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDarkTransparent" />

    <Button
        android:id="@+id/btn_Fregister_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/ic_back_white_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:orientation="vertical">


        <com.khayyamapp.juveiran.custom_views.IranSansEditText
            android:id="@+id/et_Fregister_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:layout_marginTop="@dimen/margin_medium"

            android:background="@drawable/shape_login_button"
            android:hint="@string/fRegister_inputs_email"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_medium"
            android:textAlignment="viewStart"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="@dimen/textSize_buttons" />

        <com.khayyamapp.juveiran.custom_views.IranSansEditText
            android:id="@+id/et_Fregister_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/shape_login_button"
            android:drawableEnd="@drawable/ic_person_white_24dp"
            android:hint="@string/fRegister_inputs_name"
            android:inputType="text"
            android:paddingStart="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_medium"

            android:textAlignment="viewStart"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="@dimen/textSize_buttons" />

        <com.khayyamapp.juveiran.custom_views.IranSansEditText
            android:id="@+id/et_Fregister_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/shape_login_button"
            android:drawableEnd="@drawable/ic_lock_white_24dp"
            android:gravity="right|center_vertical"
            android:hint="@string/fRegister_inputs_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_medium"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="@dimen/textSize_buttons" />

        <com.khayyamapp.juveiran.custom_views.IranSansEditText
            android:id="@+id/et_Fregister_repassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_button"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/shape_login_button"
            android:drawableEnd="@drawable/ic_lock_white_24dp"
            android:gravity="right|center_vertical"
            android:hint="@string/fRegister_inputs_rePassword"
            android:inputType="textPassword"
            android:paddingStart="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_medium"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="@dimen/textSize_buttons" />


    </LinearLayout>

    <com.khayyamapp.juveiran.custom_views.IranSansButton
        android:id="@+id/btn_Fregister_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:background="@drawable/shape_register_button"
        android:text="@string/registerFragment_registerButtonText"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/textSize_buttons" />



    <RelativeLayout
        android:id="@+id/rl_Fregister_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_transparent"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</RelativeLayout>