<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context=".activity.AboutUsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_AaboutUs_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title=" ">

        <com.khayyamapp.juveiran.custom_views.IranSansTextView
            android:id="@+id/tv_AaboutUs_toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AaboutUs_toolbarTitle"
            android:textColor="@color/textColor"
            android:textSize="@dimen/textSize_toolbar" />

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/img_AAboutUs_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/tb_AaboutUs_toolbar"
        android:layout_marginTop="@dimen/margin_medium"
        android:adjustViewBounds="true"
        android:padding="20dp"
        android:src="@drawable/logo_transparent_juveiran" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/img_AAboutUs_logo"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <com.khayyamapp.juveiran.custom_views.IranSansTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:text="@string/about_us_text1"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="@dimen/textSize_small" />

            <com.khayyamapp.juveiran.custom_views.IranSansTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:text="@string/about_us_text2"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="@dimen/textSize_small" />


            <com.khayyamapp.juveiran.custom_views.IranSansTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_medium"
                android:autoLink="web"
                android:text="www.juveiran.ir"
                android:textColor="@color/textColor"
                android:textColorLink="@color/textColor"
                android:textSize="@dimen/textSize_big" />

            <com.khayyamapp.juveiran.custom_views.IranSansTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:autoLink="web"
                android:text="@string/madedByMeText"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textColorLink="@color/textColor"
                android:textSize="@dimen/textSize_small" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>